feat: add sqlite store for graph API (#18)
* feat: add sqlite store for graph API
* add graph.Loader and graph.Syncer interfaces
* lots of refactoring

---------
