# pkg/graph/api/http/docs/swagger.json
@@ -364,12 +364,6 @@
                             "$ref": "#/definitions/api.Edge"
                         }
                     },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/http.ErrorResponse"
-                        }
-                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -414,12 +408,6 @@
                         "description": "Edge was deleted successfully",
                         "schema": {
                             "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/http.ErrorResponse"
                         }
                     },
                     "404": {
@@ -479,12 +467,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/http.NodesResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/http.ErrorResponse"
                         }
                     },
                     "404": {
@@ -585,12 +567,6 @@
                             "$ref": "#/definitions/api.Node"
                         }
                     },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/http.ErrorResponse"
-                        }
-                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -635,12 +611,6 @@
                         "description": "Node was deleted successfully",
                         "schema": {
                             "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/http.ErrorResponse"
                         }
                     },
                     "404": {
@@ -854,12 +824,6 @@
                             "$ref": "#/definitions/api.Graph"
                         }
                     },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/http.ErrorResponse"
-                        }
-                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -899,8 +863,8 @@
                             "type": "string"
                         }
                     },
-                    "400": {
-                        "description": "Bad Request",
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/http.ErrorResponse"
                         }
@@ -982,16 +946,16 @@
                     "additionalProperties": true
                 },
                 "label": {
-                    "description": "Label is edge label",
+                    "description": "Label is the edge label",
                     "type": "string"
                 },
                 "source": {
-                    "description": "Source is an ID of the edge source node.",
-                    "type": "integer"
+                    "description": "Source is an UID of the edge source node.",
+                    "type": "string"
                 },
                 "target": {
-                    "description": "Target is an ID of the edge target node.",
-                    "type": "integer"
+                    "description": "Target is an UID of the edge target node.",
+                    "type": "string"
                 },
                 "uid": {
                     "description": "UID is edge UUID.",
@@ -1026,6 +990,10 @@
                     "type": "object",
                     "additionalProperties": true
                 },
+                "createdAt": {
+                    "description": "Timestamps for graph creation \u0026 last update.",
+                    "type": "string"
+                },
                 "edges": {
                     "description": "Edge is the edge count.",
                     "type": "integer"
@@ -1038,12 +1006,11 @@
                     "description": "Nodes is the node count.",
                     "type": "integer"
                 },
-                "type": {
-                    "description": "Type is a type of graph.",
-                    "type": "string"
-                },
                 "uid": {
                     "description": "UID is graph UUID.",
+                    "type": "string"
+                },
+                "updatedAt": {
                     "type": "string"
                 }
             }
@@ -1068,6 +1035,10 @@
                     "type": "object",
                     "additionalProperties": true
                 },
+                "createdAt": {
+                    "description": "Timestamps for graph creation \u0026 last update.",
+                    "type": "string"
+                },
                 "deg_in": {
                     "description": "DegIn is the count of incoming edges.",
                     "type": "integer"
@@ -1086,6 +1057,9 @@
                 },
                 "uid": {
                     "description": "UID is node UUID.",
+                    "type": "string"
+                },
+                "updatedAt": {
                     "type": "string"
                 }
             }
