# pkg/graph/api/http/edge.go
@@ -1,11 +1,9 @@
 package http
 
 import (
-	"context"
 	"strconv"
 
 	"github.com/gofiber/fiber/v2"
-	"github.com/google/uuid"
 	"github.com/milosgajdos/orbnet/pkg/graph/api"
 )
 
@@ -41,13 +39,7 @@ func (s *Server) registerEdgeRoutes(r fiber.Router) {
 // @Failure 500 {object} ErrorResponse
 // @Router /v1/graphs/{guid}/edges [get]
 func (s *Server) GetAllEdges(c *fiber.Ctx) error {
-	// Grab Graph UID from request.
-	uid, err := uuid.Parse(c.Params("guid"))
-	if err != nil {
-		return c.Status(fiber.StatusBadRequest).JSON(ErrorResponse{
-			Error: err.Error(),
-		})
-	}
+	graphUID := c.Params("guid")
 
 	var filter api.EdgeFilter
 	filter.Limit = DefaultLimit
@@ -69,7 +61,7 @@ func (s *Server) GetAllEdges(c *fiber.Ctx) error {
 		*filter.Label = c.Query("label")
 	}
 
-	edges, n, err := s.EdgeService.FindEdges(context.TODO(), uid.String(), filter)
+	edges, n, err := s.EdgeService.FindEdges(c.Context(), graphUID, filter)
 	if err != nil {
 		if code := api.ErrorCode(err); code == api.ENOTFOUND {
 			return c.Status(fiber.StatusNotFound).JSON(ErrorResponse{
@@ -96,27 +88,14 @@ func (s *Server) GetAllEdges(c *fiber.Ctx) error {
 // @Param guid path string true "Graph UID"
 // @Param uid path string true "Edge UID"
 // @Success 200 {object} api.Edge
-// @Failure 400 {object} ErrorResponse
 // @Failure 404 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
 // @Router /v1/graphs/{guid}/edges/{uid} [get]
 func (s *Server) GetEdgeByUID(c *fiber.Ctx) error {
-	// Grab Graph UID from request.
-	guid, err := uuid.Parse(c.Params("guid"))
-	if err != nil {
-		return c.Status(fiber.StatusBadRequest).JSON(ErrorResponse{
-			Error: err.Error(),
-		})
-	}
+	graphUID := c.Params("guid")
+	nodeUID := c.Params("uid")
 
-	uid, err := uuid.Parse(c.Params("uid"))
-	if err != nil {
-		return c.Status(fiber.StatusBadRequest).JSON(ErrorResponse{
-			Error: err.Error(),
-		})
-	}
-
-	edge, err := s.EdgeService.FindEdgeByUID(context.TODO(), guid.String(), uid.String())
+	edge, err := s.EdgeService.FindEdgeByUID(c.Context(), graphUID, nodeUID)
 	if err != nil {
 		if code := api.ErrorCode(err); code == api.ENOTFOUND {
 			return c.Status(fiber.StatusNotFound).JSON(ErrorResponse{
@@ -145,12 +124,7 @@ func (s *Server) GetEdgeByUID(c *fiber.Ctx) error {
 // @Failure 500 {object} ErrorResponse
 // @Router /v1/graphs/{guid}/edges [post]
 func (s *Server) CreateEdge(c *fiber.Ctx) error {
-	guid, err := uuid.Parse(c.Params("guid"))
-	if err != nil {
-		return c.Status(fiber.StatusBadRequest).JSON(ErrorResponse{
-			Error: err.Error(),
-		})
-	}
+	graphUID := c.Params("guid")
 
 	edge := new(api.Edge)
 	if err := c.BodyParser(edge); err != nil {
@@ -165,7 +139,7 @@ func (s *Server) CreateEdge(c *fiber.Ctx) error {
 		})
 	}
 
-	if err := s.EdgeService.CreateEdge(context.TODO(), guid.String(), edge); err != nil {
+	if err := s.EdgeService.CreateEdge(c.Context(), graphUID, edge); err != nil {
 		if code := api.ErrorCode(err); code == api.ENOTFOUND {
 			return c.Status(fiber.StatusNotFound).JSON(ErrorResponse{
 				Error: err.Error(),
@@ -196,25 +170,19 @@ func (s *Server) CreateEdge(c *fiber.Ctx) error {
 // @Failure 500 {object} ErrorResponse
 // @Router /v1/graphs/{guid}/edges [patch]
 func (s *Server) UpdateEdgeBetween(c *fiber.Ctx) error {
-	// Grab Graph UID from request.
-	uid, err := uuid.Parse(c.Params("guid"))
-	if err != nil {
+	graphUID := c.Params("guid")
+
+	source := c.Query("source")
+	if len(source) == 0 {
 		return c.Status(fiber.StatusBadRequest).JSON(ErrorResponse{
-			Error: err.Error(),
+			Error: "empty source node",
 		})
 	}
 
-	source, err := parseNodeID(c.Query("source"))
-	if err != nil {
+	target := c.Query("target")
+	if len(target) == 0 {
 		return c.Status(fiber.StatusBadRequest).JSON(ErrorResponse{
-			Error: err.Error(),
-		})
-	}
-
-	target, err := parseNodeID(c.Query("target"))
-	if err != nil {
-		return c.Status(fiber.StatusBadRequest).JSON(ErrorResponse{
-			Error: err.Error(),
+			Error: "empty target node",
 		})
 	}
 
@@ -225,7 +193,7 @@ func (s *Server) UpdateEdgeBetween(c *fiber.Ctx) error {
 		})
 	}
 
-	edge, err := s.EdgeService.UpdateEdgeBetween(context.TODO(), uid.String(), source, target, *update)
+	edge, err := s.EdgeService.UpdateEdgeBetween(c.Context(), graphUID, source, target, *update)
 	if err != nil {
 		if code := api.ErrorCode(err); code == api.ENOTFOUND {
 			return c.Status(fiber.StatusNotFound).JSON(ErrorResponse{
@@ -249,26 +217,14 @@ func (s *Server) UpdateEdgeBetween(c *fiber.Ctx) error {
 // @Param guid path string true "Graph UID"
 // @Param uid path string true "Edge UID"
 // @Success 204 {string} status "Edge was deleted successfully"
-// @Failure 400 {object} ErrorResponse
 // @Failure 404 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
 // @Router /v1/graphs/{guid}/edges/{uid} [delete]
 func (s *Server) DeleteEdge(c *fiber.Ctx) error {
-	guid, err := uuid.Parse(c.Params("guid"))
-	if err != nil {
-		return c.Status(fiber.StatusBadRequest).JSON(ErrorResponse{
-			Error: err.Error(),
-		})
-	}
+	graphUID := c.Params("guid")
+	edgeUID := c.Params("uid")
 
-	uid, err := uuid.Parse(c.Params("uid"))
-	if err != nil {
-		return c.Status(fiber.StatusBadRequest).JSON(ErrorResponse{
-			Error: err.Error(),
-		})
-	}
-
-	if err := s.EdgeService.DeleteEdge(context.TODO(), guid.String(), uid.String()); err != nil {
+	if err := s.EdgeService.DeleteEdge(c.Context(), graphUID, edgeUID); err != nil {
 		if code := api.ErrorCode(err); code == api.ENOTFOUND {
 			return c.Status(fiber.StatusNotFound).JSON(ErrorResponse{
 				Error: err.Error(),
@@ -297,28 +253,23 @@ func (s *Server) DeleteEdge(c *fiber.Ctx) error {
 // @Failure 500 {object} ErrorResponse
 // @Router /v1/graphs/{guid}/edges [delete]
 func (s *Server) DeleteEdgeBetween(c *fiber.Ctx) error {
-	guid, err := uuid.Parse(c.Params("guid"))
-	if err != nil {
+	graphUID := c.Params("guid")
+
+	source := c.Query("source")
+	if len(source) == 0 {
 		return c.Status(fiber.StatusBadRequest).JSON(ErrorResponse{
-			Error: err.Error(),
+			Error: "empty source node",
 		})
 	}
 
-	source, err := parseNodeID(c.Query("source"))
-	if err != nil {
+	target := c.Query("target")
+	if len(target) == 0 {
 		return c.Status(fiber.StatusBadRequest).JSON(ErrorResponse{
-			Error: err.Error(),
+			Error: "empty target node",
 		})
 	}
 
-	target, err := parseNodeID(c.Query("target"))
-	if err != nil {
-		return c.Status(fiber.StatusBadRequest).JSON(ErrorResponse{
-			Error: err.Error(),
-		})
-	}
-
-	if err := s.EdgeService.DeleteEdgeBetween(context.TODO(), guid.String(), source, target); err != nil {
+	if err := s.EdgeService.DeleteEdgeBetween(c.Context(), graphUID, source, target); err != nil {
 		if code := api.ErrorCode(err); code == api.ENOTFOUND {
 			return c.Status(fiber.StatusNotFound).JSON(ErrorResponse{
 				Error: err.Error(),
